@@ -6,10 +6,9 @@ import com.jeju_campking.campking.shop.food.repository.FoodMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -20,11 +19,12 @@ public class FoodService {
     private final FoodMapper foodMapper;
 
 
+    @Transactional
     public List<FoodResponseDTO> findAll(){
         List<Food> foodList = foodMapper.findAll();
-//        log.info("food findAll {} ", list);
 
-        List<FoodResponseDTO> list = foodList.stream().map(FoodResponseDTO::convertFood).collect(Collectors.toList());
+        List<FoodResponseDTO> list = foodList.stream().map(FoodResponseDTO::convertFood).toList();
+        log.info("food findAll {} ", list);
 
         return list;
     }
